--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
