--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "mongodb": "^6.8.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
-    "next": "14.2.6",
+    "next": "^14.2.12",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stream": "^0.0.3"
   },
   "devDependencies": {
     "eslint": "^8",
