--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.5.4",
+    "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
-    "next": "^14.2.12",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
